--- a/BloodlineDNATestingServiceManagementSystem/LoginWindow.xaml
+++ b/BloodlineDNATestingServiceManagementSystem/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BloodlineDNATestingServiceManagementSystem"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="LoginWindow" Height="400" Width="700">
+        Title="LoginWindow" Height="400" Width="700" Background="#FFBAE6FD">
     <Window.Resources>
         <Style TargetType="Label">
             <Setter Property="FontFamily" Value="Arial"/>
@@ -24,22 +24,22 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="59*" />
+            <RowDefinition Height="266*" />
+            <RowDefinition Height="59*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="400" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="300" Margin="0,0,50,0" RenderTransformOrigin="0.5,0.5">
-            <Label HorizontalAlignment="Center">Login Form</Label>
-            <Label Content="Email:" Margin="0,0,0,6"/>
-            <TextBox Name="txtEmail" Height="32" Margin="0,0,0,15"/>
-            <Label Content="Password:" Margin="0,0,0,5"/>
-            <TextBox Name="txtPassword" Margin="0,0,0,25"/>
-            <Button x:Name="btnLogin" Content="Login" Width="100" Padding="10" Click="btnLogin_Click"/>
+        <StackPanel Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="350" RenderTransformOrigin="0.5,0.5" Margin="50,0,0,38" Grid.RowSpan="3">
+           
+            <Label Content="Email:" FontSize="26" Foreground="#FF1E3A8A" Margin="0,10,0,5"/>
+            <TextBox Name="txtEmail" Height="34" Background="#FFF0F9FF" FontSize="20"/>
+            <Label Content="Password:" FontSize="26" Foreground="#FF1E3A8A" Margin="0,10,0,5"/>
+            <TextBox Name="txtPassword" Height="34" Background="#FFF0F9FF" FontSize="20"/>
+            <Button x:Name="btnLogin" Content="Login" Width="120" Height="62" Margin="0,30,0,0" Background="#FF1E3A8A" Foreground="White" FontWeight="bold" FontSize="20" HorizontalAlignment="Center" Click="btnLogin_Click"/>
         </StackPanel>
     </Grid>
 </Window>
